:pencil: change the font size and cursor style

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 body, html {
 	height: 100%;
 	margin: 0;
+	font-size: 18px;
 }
 
 .consoleWrapper {
@@ -17,6 +18,11 @@ body, html {
 
 .consoleCursor {
 	font-weight: bold;
+	background: #66ff33;
+	display: inline-block;
+	vertical-align: sub;
+	height: 1.1rem;
+	width: .6rem;
 }
 
 
